hack together better experience on mobile

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <div id="outer" class="center">
             <div id="inner" class="center">
                 <div id="menu" onclick="menu_toggle()" onmouseover="menu_show()" onmouseout="menu_unshow()" class="menu fadein">
-                    <a style="top: 35%;" href="#">home</a>
-                    <a style="top: 50%;" href="#">blog</a>
-                    <a style="top: 65%;" href="#">archive</a>
+                    <a id="a0" style="top: 35%;" href="#">home</a>
+                    <a id="a1" style="top: 50%;" href="#">archive</a>
+                    <a id="a2" style="top: 65%;" href="#">blog</a>
                 </div>
 
                 <img id="av" onload="menu_resize()" class="avatar" width="50%">
