--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <div id="inner" class="center">
                 <div id="menu" onclick="menu_toggle()" onmouseover="menu_show()" onmouseout="menu_unshow()" class="menu fadein">
                     <a id="a0" style="top: 35%;" href="#">home</a>
-                    <a id="a1" style="top: 50%;" href="#">archive</a>
-                    <a id="a2" style="top: 65%;" href="#">blog</a>
+                    <a id="a1" style="top: 50%;" href="http://archive.loone.party">archive</a>
+                    <a id="a2" style="top: 65%;" href="http://blog.loone.party">blog</a>
                 </div>
 
                 <img id="av" onload="menu_resize()" class="avatar" width="50%">
